# MeetingRelay

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  README.phase0-archive.md  README.zh-CN.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  mvp.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: bootstrap-command.txt  bootstrap-contract.test.mjs  bootstrap-contract.ts  main.ts  mvp-contract.test.mjs  mvp-contract.ts  styles.css  transcript-render.test.mjs  transcript-render.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/mvp/: audio.rs  contract.rs  dsp.rs  export.rs  mod.rs  service.rs  storage.rs  translation.rs
crates/benchmark-contract/: Cargo.toml
crates/benchmark-contract/src/: decimal.rs  evidence.rs  lib.rs  timepoint.rs
crates/model-worker-contract/: Cargo.toml
crates/model-worker-contract/src/: candidate_conformance.rs  engine.rs  error.rs  fake.rs  identity.rs  lib.rs  protocol.rs  sidecar_wire.rs
crates/model-worker-contract/tests/: backend_session.rs  candidate_conformance_runner.rs  conformance.rs  sidecar_wire.rs
crates/model-worker-sherpa-native/: Cargo.toml  README.md  build.rs
crates/model-worker-sherpa-native/src/: candidate_builder_input.rs  candidate_execution.rs  candidate_fault.rs  candidate_quality_sample.rs  candidate_quality_shard.rs  descriptor.rs  lib.rs  realtime.rs  worker_provenance.rs
crates/model-worker-sherpa-native/tests/: candidate_builder_input.rs  candidate_execution_host_cli.rs  candidate_fault_host_cli.rs  candidate_host_cli.rs  candidate_quality_host_cli.rs  candidate_quality_shard_host_cli.rs  native_sherpa_smoke.rs  worker_provenance.rs
crates/model-worker-whisper-native/: Cargo.toml  README.md
crates/model-worker-whisper-native/src/: lib.rs
test-fixtures/: manifest.json  manifest.schema.json  manifest.sha256
tools/funasr-sidecar/: mock-sidecar.mjs  sidecar-artifact-pack-attestation.mjs  sidecar-artifact-pack-attestation.schema.json  sidecar-artifact-pack-attestation.test.mjs  sidecar-candidate-preflight.mjs  sidecar-candidate-preflight.schema.json  sidecar-candidate-preflight.test.mjs  sidecar-install-scheme-record-attestation.mjs  sidecar-install-scheme-record-attestation.schema.json  sidecar-install-scheme-record-attestation.test.mjs  sidecar-package-lock-attestation.mjs  sidecar-package-lock-attestation.schema.json  sidecar-package-lock-attestation.test.mjs  sidecar-python-launch.mjs  sidecar-python-launch.schema.json  sidecar-python-launch.test.mjs  sidecar-python-probe-boundary.mjs  sidecar-source-attestation.mjs  sidecar-source-attestation.schema.json  sidecar-source-attestation.test.mjs  sidecar-venv-materialization-attestation.mjs  sidecar-venv-materialization-attestation.schema.json  sidecar-venv-materialization-attestation.test.mjs  sidecar-wire-foundation.mjs  sidecar-wire-foundation.schema.json  sidecar-wire-foundation.test.mjs
tools/mvp/: README.md  release.ps1  release.test.ps1  start.ps1  start.test.ps1
tools/phase0-harness/: candidate-artifact-contract.mjs  candidate-artifact-contract.test.mjs  canonical-json.mjs  clock-calibration.mjs  clock-calibration.test.mjs  clock-domain.mjs  fixture-contract.mjs  fixture-contract.test.mjs  generate-fixtures.mjs  hw-ref-collector.mjs  hw-ref-collector.test.mjs  ledger-contract.mjs  ledger-contract.test.mjs  provider-harness.mjs  provider-harness.test.mjs  queue-resource-harness.mjs  queue-resource-harness.test.mjs  validate-candidate-artifact-contract.mjs  validate-clock-calibration.mjs  validate-fixtures.mjs  validate-ledger-replays.mjs  validate-provider-harness.mjs  validate-queue-resource-harness.mjs
tools/sherpa-native/: README.md  asr-error-rate.mjs  asr-error-rate.test.mjs  asr-quality-run-policy.json  asr-quality-run-policy.mjs  asr-quality-run-policy.schema.json  asr-quality-run-policy.test.mjs  asr-scorer-profile.json  assets.lock.json  assets.lock.sha256  audit-pe-dependencies.ps1  build-native-fatal-boundary-fixture.ps1  build-windows-controlled-root-attestor.ps1  candidate-conformance.test.mjs  candidate-input-bundle-plan.mjs  candidate-input-bundle-plan.test.mjs  candidate-input-materializer.mjs  candidate-input-materializer.test.mjs  candidate-input-measured-closeout.mjs  candidate-input-measured-closeout.test.mjs  candidate-input-plan.mjs  candidate-input-plan.test.mjs  candidate-quality-smoke-reference.json  candidate-schema-registry.json  controlled-hypothesis-ledger.mjs  controlled-hypothesis-ledger.schema.json  controlled-hypothesis-ledger.test.mjs  fleurs-gold-source-policy.json  fleurs-gold-source.mjs  fleurs-gold-source.schema.json  fleurs-gold-source.test.mjs  fleurs-materialized-corpus.mjs  fleurs-materialized-corpus.test.mjs  formal-run-trust-envelope.mjs  formal-run-trust-envelope.schema.json  formal-run-trust-envelope.test.mjs  formal-run-trust-envelope.windows.test.ps1  formal-run-trust-policy.json  materialize.ps1  native-candidate-component-evidence.mjs  (+40 more)
tools/whisper-native/: README.md  whisper-fallback-candidate-preflight.mjs  whisper-fallback-candidate-preflight.schema.json  whisper-fallback-candidate-preflight.test.mjs  whisper-fallback-ci-build-output-runtime-identity-attestation.mjs  whisper-fallback-ci-build-output-runtime-identity-attestation.schema.json  whisper-fallback-ci-build-output-runtime-identity-attestation.test.mjs  whisper-fallback-runtime-version-probe.mjs  whisper-fallback-runtime-version-probe.schema.json  whisper-fallback-runtime-version-probe.test.mjs
(+5 files in other folders)
