[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/model-worker-contract",
  "crates/model-worker-sherpa-native",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.95"
license = "UNLICENSED"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
