[package]
name = "meetingrelay-model-worker-sherpa-native"
description = "Offline sherpa-onnx native backend adapter for MeetingRelay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
native-sherpa = ["dep:sherpa-onnx"]
native-fault-fixture = []
native-quality-sample = ["native-sherpa"]
native-quality-shard = ["native-quality-sample"]

[dependencies]
meetingrelay-model-worker-contract = { path = "../model-worker-contract" }
sha2 = "=0.10.9"
sherpa-onnx = { version = "=1.13.4", default-features = false, features = ["shared"], optional = true }

[build-dependencies]
sha2 = "=0.10.9"

[[bin]]
name = "meetingrelay-sherpa-candidate-host"
path = "src/bin/meetingrelay_sherpa_candidate_host.rs"
required-features = ["native-sherpa"]
test = false
bench = false

[[bin]]
name = "meetingrelay-sherpa-candidate-execution-host"
path = "src/bin/meetingrelay_sherpa_candidate_execution_host.rs"
required-features = ["native-sherpa"]
test = false
bench = false

[[bin]]
name = "meetingrelay-sherpa-candidate-quality-host"
path = "src/bin/meetingrelay_sherpa_candidate_quality_host.rs"
required-features = ["native-quality-sample"]
test = false
bench = false

[[bin]]
name = "meetingrelay-sherpa-candidate-quality-shard-host"
path = "src/bin/meetingrelay_sherpa_candidate_quality_shard_host.rs"
required-features = ["native-quality-shard"]
test = false
bench = false

[[bin]]
name = "meetingrelay-sherpa-candidate-fault-host"
path = "src/bin/meetingrelay_sherpa_candidate_fault_host.rs"
required-features = ["native-sherpa", "native-fault-fixture"]
test = false
bench = false

[lints]
workspace = true
