[package]
name = "meetingrelay-model-worker-whisper-native"
description = "WP-0.4.5a offline whisper-rs native link smoke for MeetingRelay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
native-whisper = ["dep:whisper-rs"]

[dependencies]
whisper-rs = { version = "=0.16.0", default-features = false, optional = true }

[lints]
workspace = true
