[package]
name = "meetingrelay-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[lib]
name = "meetingrelay_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
meetingrelay-benchmark-contract = { path = "../../../crates/benchmark-contract" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "=2.11.2", default-features = false, features = ["wry", "compression"] }

[dev-dependencies]
tauri = { version = "=2.11.2", default-features = false, features = ["wry", "compression", "test"] }

[lints]
workspace = true
