[package]
name = "meetingrelay-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[lib]
name = "meetingrelay_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
rusqlite = { version = "=0.40.1", default-features = false, features = ["bundled-windows"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.11.2", default-features = false, features = ["wry", "compression"] }
ureq = { version = "=2.12.1", default-features = false, features = ["native-certs", "tls"] }

[target.'cfg(windows)'.dependencies]
cpal = { version = "=0.17.3", default-features = false }
meetingrelay-model-worker-sherpa-native = { path = "../../../crates/model-worker-sherpa-native", features = ["native-sherpa"] }

[dev-dependencies]
tauri = { version = "=2.11.2", default-features = false, features = ["wry", "compression", "test"] }

[lints]
workspace = true
